# rutabaga

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
src/core/: mod.rs
src/gui/: cleaner.rs  mod.rs  style.rs
